# LLM-LPM_PRAMA-Protokol

./: .gitignore  ANOMALIES.md  PREREGISTRATION_P1.md  README.md  pyproject.toml
examples/: make_synthetic.py
scripts/: analyze_ep1.py  collect_ollama.py  evaluate_state_discrimination.py  latent_llm_test.py  score_sessions_prama.py  validate_state_discrimination_inputs.py
src/PRAMA-Protokol/: omega.py  projection.py
src/PRAMA_Protokol/: ingest.py
src/aptadynamic_llm/: ep1_config.py  ingest.py  omega.py
src/aptadynamic_llm/evaluation/: __init__.py  state_discrimination_metrics.py
tests/: test_analyze_ep1.py  test_collect_ollama.py  test_state_discrimination_metrics.py  test_state_discrimination_validation.py  test_state_discrimination_wiring.py  verifiable_results_test.py
