[project]
name = "aptadynamic-llm"
version = "0.0.1"
description = "LLM domain implementation of the PRAMA Protokol (exploratory draft): structural viability of generation sessions from token-level observables"
requires-python = ">=3.10"
dependencies = ["pandas>=2.0", "numpy>=1.24", "prama-protokol"]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
